update language used

--- a/group-info/report.html
+++ b/group-info/report.html
@@ -13,7 +13,7 @@
       <div class="section center">
         <h2 class="no-bottom-margin">LISP Interpreter</h2>
         <h3 class="no-margin">Spring 2022 • CS 403</h3>
-        <p class="no-top-margin">Language used: {Something}</p>
+        <p class="no-top-margin">Language used: C++</p>
       </div>
       <div class="tabs row">
         <div class="col s12 m4 tab active" data-tab="part3">
