update report and readme

--- a/group-info/report.html
+++ b/group-info/report.html
@@ -17,13 +17,13 @@
       </div>
       <div class="tabs row">
         <div class="col s12 m4 tab active" data-tab="part3">
-          <a href='javascript:tabSelect("part3")'> Part 3<br />Interpreter </a>
+          <a href='javascript:tabSelect("part3")'> Part 3<br />Testing </a>
         </div>
         <div class="col s12 m4 tab" data-tab="part2">
-          <a href='javascript:tabSelect("part2")'> Part 2<br />Parser </a>
+          <a href='javascript:tabSelect("part2")'> Part 2<br />Compilation </a>
         </div>
         <div class="col s12 m4 tab" data-tab="part1">
-          <a href='javascript:tabSelect("part1")'> Part 1<br />Scanner </a>
+          <a href='javascript:tabSelect("part1")'> Part 1<br />Implementation </a>
         </div>
       </div>
       <div class="tab-content-area">
