--- a/group-info/report.html
+++ b/group-info/report.html
@@ -143,13 +143,13 @@
               general grammar of languages (This is an agile teambuilding
               exercise). This was a great opportunity to get to learn about
               interpreter concepts together as a group and stay on the same
-              page. After we learned about the general grammer of languages. We
-              then learned about LISP, we played around with a Common Lisp by
-              using Steel Bank Common Lisp (SBCL). This helped us understand
-              some general Lisp concepts. Then we read through Kamin's Pascal
-              Lisp to see the flavour of Lisp we will be implementing. After all
-              of this was complete we could then begin to work on our own
-              implementation of the Kamin's Lisp.
+              page. After we learned about the general grammer of languages
+              through the implementation of JLox. We then learned about LISP, we
+              played around with a Common Lisp by using Steel Bank Common Lisp
+              (SBCL). This helped us understand some general Lisp concepts. Then
+              we read through Kamin's Pascal Lisp to see the flavour of Lisp we
+              will be implementing. After all of this was complete we could then
+              begin to work on our own implementation of the Kamin's Lisp.
             </p>
             <h4>Design</h4>
             <p>
@@ -297,7 +297,7 @@
           </div>
 
           <div class="section">
-            <!-- !Update Script to work with test cases -->
+            <!-- !Convert to picture form before turning in -->
             <h4>Test Cases</h4>
             <p style="margin-bottom: 0">Choose the test case to view:</p>
             <ul style="margin-top: 0">
@@ -316,66 +316,42 @@
                 </a>
               </li>
               <li>
-                <a
-                  href="javascript:setTestCase(3)"
-                  test-case="case-3"
-                >
+                <a href="javascript:setTestCase(3)" test-case="case-3">
                   Test Case 3
                 </a>
               </li>
               <li>
-                <a
-                  href="javascript:setTestCase(4)"
-                  test-case="case-4"
-                >
+                <a href="javascript:setTestCase(4)" test-case="case-4">
                   Test Case 4
                 </a>
               </li>
               <li>
-                <a
-                  href="javascript:setTestCase(5)"
-                  test-case="case-5"
-                >
+                <a href="javascript:setTestCase(5)" test-case="case-5">
                   Test Case 5
                 </a>
               </li>
               <li>
-                <a
-                  href="javascript:setTestCase(6)"
-                  test-case="case-6"
-                >
+                <a href="javascript:setTestCase(6)" test-case="case-6">
                   Test Case 6
                 </a>
               </li>
               <li>
-                <a
-                  href="javascript:setTestCase(7)"
-                  test-case="case-7"
-                >
+                <a href="javascript:setTestCase(7)" test-case="case-7">
                   Test Case 7
                 </a>
               </li>
               <li>
-                <a
-                  href="javascript:setTestCase(8)"
-                  test-case="case-8"
-                >
+                <a href="javascript:setTestCase(8)" test-case="case-8">
                   Test Case 8
                 </a>
               </li>
               <li>
-                <a
-                  href="javascript:setTestCase(9)"
-                  test-case="case-9"
-                >
+                <a href="javascript:setTestCase(9)" test-case="case-9">
                   Test Case 9
                 </a>
               </li>
               <li>
-                <a
-                  href="javascript:setTestCase(10)"
-                  test-case="case-10"
-                >
+                <a href="javascript:setTestCase(10)" test-case="case-10">
                   Test Case 10
                 </a>
               </li>
@@ -390,50 +366,32 @@
                 </a>
               </li>
               <li>
-                <a
-                  href="javascript:setTestCase(13)"
-                  test-case="case-13"
-                >
+                <a href="javascript:setTestCase(13)" test-case="case-13">
                   Test Case 13
                 </a>
               </li>
               <li>
-                <a
-                  href="javascript:setTestCase(14)"
-                  test-case="case-14"
-                >
+                <a href="javascript:setTestCase(14)" test-case="case-14">
                   Test Case 14
                 </a>
               </li>
               <li>
-                <a
-                  href="javascript:setTestCase(15)"
-                  test-case="case-15"
-                >
+                <a href="javascript:setTestCase(15)" test-case="case-15">
                   Test Case 15
                 </a>
               </li>
               <li>
-                <a
-                  href="javascript:setTestCase(16)"
-                  test-case="case-16"
-                >
+                <a href="javascript:setTestCase(16)" test-case="case-16">
                   Test Case 16
                 </a>
               </li>
               <li>
-                <a
-                  href="javascript:setTestCase(17)"
-                  test-case="case-17"
-                >
+                <a href="javascript:setTestCase(17)" test-case="case-17">
                   Test Case 17
                 </a>
               </li>
               <li>
-                <a
-                  href="javascript:setTestCase(18)"
-                  test-case="case-18"
-                >
+                <a href="javascript:setTestCase(18)" test-case="case-18">
                   Test Case 18
                 </a>
               </li>
@@ -520,7 +478,30 @@
             </p>
             <code> $ bash tester.sh </code>
           </div>
+          <div class="section">
+            <h4>Using the tester</h4>
+            <p>
+              Once you have ran the tester, it will prompt you for a test case
+              to run. You can either type a specific test case number or type
+              "ALL" to run all test cases. The tester will run run the case(s)
+              and print the interpreter passed or failed the test case(s).
+            </p>
+          </div>
 
+          <div class="divider"></div>
+          <div class="section">
+            <h4>Common Problems</h4>
+            <p style="margin-bottom: 0">
+              These are some fixes for common problems.
+            </p>
+            <ul>
+              <li>
+                If you are using a Windows machine, make sure the file line
+                endings are LF and not CRLF. CRLF line endings will break the
+                tester.
+              </li>
+            </ul>
+          </div>
           <p></p>
         </div>
       </div>
@@ -575,7 +556,7 @@
     // handle test case updating
     testNumDisplay.innerHTML = "Test Case " + num + ":";
     testOutputNumDisplay.innerHTML = "Test Case Output " + num + ":";
-    testDisplay.innerHTML = readTextFile("../tester/tests/test" + num + ".txt");
+    testDisplay.innerHTML = readTextFile("../tester/tests/test" + num + ".lisp");
     testAnsDisplay.innerHTML = readTextFile(
       "../tester/tests/test" + num + ".ans"
     ).substring(1);
