--- a/group-info/report.html
+++ b/group-info/report.html
@@ -137,13 +137,13 @@
               We took a group approach for the research required for this
               project. This involved meeting up as a group every Tuesday at the
               library. During these meetings, we discussed the goals of the
-              project, the language to use, and how to impement each part of the
+              project, the language to use, and how to implement each part of the
               interpreter (scanner, parser, and the interpreter. We popcorn read
               the Crafting Interpreters textbook in order to learn about the
-              general grammar of languages (This is an agile teambuilding
+              general grammar of languages (This is an agile team building
               exercise). This was a great opportunity to get to learn about
               interpreter concepts together as a group and stay on the same
-              page. After we learned about the general grammer of languages
+              page. After we learned about the general grammar of languages
               through the implementation of JLox. We then learned about LISP, we
               played around with a Common Lisp by using Steel Bank Common Lisp
               (SBCL). This helped us understand some general Lisp concepts. Then
@@ -291,7 +291,7 @@
               with a modern day C++ compiler. The testing script ask to run
               either a specified single test case or all of the test cases. The
               tester will then run the test case(s) on the C++ Kamin Interpreter
-              and our own interpeter and compare the outputs. If they resulting
+              and our own interpreter and compare the outputs. If they resulting
               outputs are the same then the test passes.
             </p>
           </div>
@@ -443,7 +443,7 @@
           <div class="section">
             <h4>Interpreter Modes</h4>
             <p>
-              This project was made using python3. The interpeter itself is like
+              This project was made using python3. The interpreter itself is like
               Python3 since it has two modes. It can either interpret Lisp code
               from the command line or from a file. The file mode uses argv to
               read in the name of the file to interpret.
