add to implementation description in  manual

--- a/group-info/report.html
+++ b/group-info/report.html
@@ -153,11 +153,32 @@
             </p>
             <h4>Design</h4>
             <p>
-              Since this project has many parts that must work together. We had
-              to make some selective design choices.
+              Since this project has many parts that must work together, we had
+              to make some selective design choices. Due to all group members'
+              familiarity with python, that is the language we selected. We decided  
+              to use python's built-in operator library to implement the operators 
+              and define our own functions as needed. We whiteboarded different 
+              ideas for the implementation of the code and discussed as a group 
+              our plans for implementation of certain functionalities such as 
+              operators, types (number?, symbol?, list?, null?), replacing true and 
+              false with T and (), printing, and other built in names such as if, 
+              while, set, begin, cons, car, cdr, and how to implement function 
+              definition and calling.
             </p>
             <h4>Implementation of Code</h4>
-            <p></p>
+            <p>
+              To implement this code, we met as a group many times until the project 
+              was complete. One group member would broadcast their screen onto a TV in 
+              a group study room in Gorgas and the others would discuss specifically how 
+              to implement the design we came up with in the beginning stages of devolopment. 
+              We changed which member would be broadcasting their screen and which members 
+              would be verbally describing how to implement the design. We worked 
+              collaboratively and efficiently to implement this program as a group using 
+              a style of trio programming that has been common throughout internships. This 
+              style of implementation worked well for us as we were able to communicate 
+              efficiently and clearly with each other throughout the process so our 
+              design could come to life.
+            </p>
           </div>
           <p></p>
         </div>
